website/versioned_docs/version-4.5.2/api/misc.mdx
---
title: Miscellaneous
hide_table_of_contents: true
description: Assorted utilities and other exports
---

import TypeScriptAdmonition from './_ts_admonition.md';

<TypeScriptAdmonition />

## Utilities

### `defaultValidator`

```ts
function defaultValidator(query: RuleGroupTypeAny): {
  [id: string]: { valid: boolean; reasons?: string[] };
};
```

Pass `validator={defaultValidator}` to automatically validate groups (rules will be ignored). A group will be marked invalid if either 1) it has no child rules or groups (`query.rules.length === 0`), or 2) it has a missing/invalid `combinator` and more than one child rule or group (`rules.length >= 2`).

You can see an example of the default validator in action in the [demo](https://react-querybuilder.js.org/react-querybuilder/) if you check the ["Use validation" option](https://react-querybuilder.js.org/react-querybuilder/#validateQuery=true). Empty groups will have bold text on their "+Rule" button and a description of the situation where the rules normally appear.

### `findPath`

```ts
function findPath(path: number[], query: RuleGroupTypeAny): RuleType | RuleGroupTypeAny;
```

`findPath` is a utility function for finding the rule or group within the query hierarchy that has a given `path`. Useful in custom [`onAddRule`](./querybuilder#onaddrule) and [`onAddGroup`](./querybuilder#onaddgroup) functions.

### `convertQuery`

```ts
function convertQuery(query: RuleGroupType): RuleGroupTypeIC;
// OR
function convertQuery(query: RuleGroupTypeIC): RuleGroupType;
```

`convertQuery` toggles a query between the conventional `RuleGroupType` structure (with combinators at the group level) and the "independent combinators" structure (`RuleGroupTypeIC`, used with the [`independentCombinators` prop](./querybuilder#independentcombinators)).

`convertToIC` and `convertFromIC` do the same thing as `convertQuery`, but only in one direction.

### `transformQuery`

```ts
function transformQuery(query: RuleGroupTypeAny, options: QueryTransformerOptions): any;
```

This function recursively steps through nested `rules` arrays in a `RuleGroupType` or `RuleGroupTypeIC`, passing each `RuleType` object to a provided `ruleProcessor` function. Available options include:

- `ruleProcessor`: Custom processing for each rule.
- `ruleGroupProcessor`: Custom processing for each rule group. (The `rules` property will be overwritten.)
- `propertyMap`: Keys in the rule or group objects that match keys in this object will be renamed to the corresponding value.
- `combinatorMap`: Best explained with an example: `{and: "&&", or: "||"}` would translate "and"/"or" combinators to "&&"/"||", respectively.
- `operatorMap`: Convert operators that match the keys in this object to the corresponding values, e.g. `{"=": "=="}`.
- `deleteRemappedProperties`: Defaults to `true`; pass `false` to leave the remapped properties _and_ the original properties in the resulting object.

See the [test suite](https://github.com/react-querybuilder/react-querybuilder/blob/main/packages/react-querybuilder/src/utils/transformQuery.test.ts) for example usage.

## Query tools

Several methods are available to assist with manipulation of query objects outside the context of the `<QueryBuilder />` component:

- `add` - adds a rule or group (and an independent combinator if necessary to keep the query valid)
- `remove` - removes a rule or group (and the previous independent combinator if one exists)
- `update` - updates a property of a rule or group, or updates an independent combinator
- `move` - moves (or clones, with new `id` and `path`) a rule or group to a new location in the query tree

These methods are used by the `<QueryBuilder />` component itself, so they are guaranteed to achieve the same result as a corresponding UI-based update.

## Defaults

The following default configuration objects are exported for convenience.

- `defaultCombinators` (see [`combinators` prop](./querybuilder#combinators))
- `defaultOperators` (see [`operators` prop](./querybuilder#operators))
- `defaultTranslations` (see [`translations` prop](./querybuilder#translations))
- `defaultValueProcessor` and variants for non-SQL formats (see [Export](./export) > [Value processor](./export#value-processor))
- `defaultFields` (see [`fields` prop](./querybuilder#fields))
- `standardClassnames` (see [CSS classes](./classnames))

The default components are also exported:

- `ActionElement` - used for action buttons (to add rules, remove groups, etc.)
- `DragHandle` - used for the drag handle on rules and group headers
- `NotToggle` - used for the "Invert this group" toggle switch
- `Rule` - the default rule component
- `RuleGroup` - the default rule group component
- `ValueEditor` - the default `valueEditor` component
- `ValueSelector` - used for drop-down lists (combinator, field, and operator selectors)
